--- a/index.css
+++ b/index.css
@@ -51,7 +51,8 @@ body {
     border-radius: 5px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     font-weight: 500;
-    font-size: 16px;  
+    font-size: 16px;
+    cursor: pointer;  
 }
 
 .conversions-results {
